# LR6

./: .clang-format  .clangd  CMakeLists.txt  README.md
diagrams/: .$LR6_1.drawio.bkp  .$LR6_2.drawio.bkp  .$LR6_3.drawio.bkp  LR6_2.drawio  LR6_3.drawio
include/common/: abilities.h  box.h  error.h  format.h  input.h  print.h  rc.h  result.h  string.h  strong_alias.h  task.h  utf8.h  utility.h
include/task_1/: task_1.h
include/tasks/: task_1.h  task_2.h  task_3.h
src/: CMakeLists.txt  main.cpp
src/lr6/: CMakeLists.txt  input.cpp  print.cpp  string.cpp  task.cpp  task_1.cpp  task_2.cpp  task_3.cpp  utf8.cpp
src/lr6/task_1/: task_1.cpp
tests/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp
